partial switch to 16:9. also made jquery ui button setup a bit easier

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -20,10 +20,10 @@
                     <p>Proofer - Logic Engine</p>
                 </div>
                 <ul id="MainMenuOptions" class="center">
-                    <li><input type="button" value="Play Game" id="MenuPlayGame" class="menu-item" /></li>
-                    <li><input type="button" value="Pick Level" id="MenuPickLevel" class="menu-item" /></li>
-                    <li><input type="button" value="Reset Progress" id="MenuReset" class="menu-item" /></li>
-                    <li><input type="button" value="Exit" id="MenuExitGame" class="menu-item" /></li>
+                    <li><input type="button" value="Play Game" id="MenuPlayGame" class="jui-button" /></li>
+                    <li><input type="button" value="Pick Level" id="MenuPickLevel" class="jui-button" /></li>
+                    <li><input type="button" value="Reset Progress" id="MenuReset" class="jui-button" /></li>
+                    <li><input type="button" value="Exit" id="MenuExitGame" class="jui-button" /></li>
                 </ul>
             </div>
             <div id="PickLevel" style="display: none">
@@ -51,10 +51,10 @@
                     </div>
                 </div>
                 <div id="PickLevel_PageControls">
-                    <button type="button" id="PickLevel_PageControls_Prev">Prev Page</button>
-                    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
-                    <button type="button" id="PickLevel_PageControls_Back">Back to Main Menu</button>
-                    <button type="button" id="PickLevel_PageControls_Play">Play Level</button>
+                    <button type="button" id="PickLevel_PageControls_Prev" class="jui-button">Prev Page</button>
+                    <button type="button" id="PickLevel_PageControls_Next" class="jui-button">Next Page</button>
+                    <button type="button" id="PickLevel_PageControls_Back" class="jui-button">Back to Main Menu</button>
+                    <button type="button" id="PickLevel_PageControls_Play" class="jui-button">Play Level</button>
                 </div>
             </div>
             <div id="GameScreen" style="display: none;" class="fill">
@@ -183,8 +183,8 @@
                             <li><div data="operator" class="operator"><span data="operator">&harr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
                             <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
-                            <li><div id="Dialogs_FactCreation_OpList_Negate"><span>&tilde;</span></div></li>
-                            <li><div id="Dialogs_FactCreation_OpList_Clear"><span>Clear</span></div></li>
+                            <li><div id="Dialogs_FactCreation_OpList_Negate" class="jui-button"><span>&tilde;</span></div></li>
+                            <li><div id="Dialogs_FactCreation_OpList_Clear" class="jui-button"><span>Clear</span></div></li>
                         </ul>
                     </div>
                 </div>
