Added OptionsMenu (no real content, just trying to test to see if my commit will show up under my profile)

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -22,9 +22,13 @@
                 <ul id="MainMenuOptions" class="center">
                     <li><input type="button" value="Play Game" id="MenuPlayGame" class="jui-button" /></li>
                     <li><input type="button" value="Pick Level" id="MenuPickLevel" class="jui-button" /></li>
+                    <li><input type="button" value="Options" id="MenuOptions" class="jui-button" /></li>
                     <li><input type="button" value="Reset Progress" id="MenuReset" class="jui-button" /></li>
                     <li><input type="button" value="Exit" id="MenuExitGame" class="jui-button" /></li>
                 </ul>
+            </div>
+            <div id="Options" class="center" style="display: none;">
+                
             </div>
             <div id="PickLevel" style="display: none">
                 <div id="PickLevel_LevelContainer">
@@ -194,10 +198,10 @@
                     <h1>In-Game Menu</h1>
                     <h3>Press ENTER to return.</h3>
                     <ul id="PauseMenu_Content_Options">
-                        <li>Resume</li>
-                        <li>Options</li>
-                        <li>Main Menu</li>
-                        <li>Exit Game</li>
+                        <li id="PauseMenu_Content_Options_Resume" class="jui-button">Resume</li>
+                        <li id="PauseMenu_Content_Options_Options" class="jui-button">Options</li>
+                        <li id="PauseMenu_Content_Options_Menu" class="jui-button">Main Menu</li>
+                        <li id="PauseMenu_Content_Options_Exit" class="jui-button">Exit Game</li>
                     </ul>
                 </div>
             </div>
