Added gruntfile which currently just runs the r.js optimizer

--- a/proofer.html
+++ b/proofer.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/level_selection.css" />
         <link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
         <script src="js/libs/require.js/require.js"></script>
-        <script src="dependencies.js"></script>
-        <script src="js/init.js"></script>
+        <script src="build/proofer.js"></script>
     </head>
     <body class="menu-focused fill">
         <div id="FilterLayer" class="fill" style="display: none;"></div>
