Added more nwjs support, so everything laods except requirejs. The extension no longer works, but working on it.

--- a/proofer.html
+++ b/proofer.html
@@ -3,11 +3,7 @@
     <head>
         <title>Proofer - The Logic Engine</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <link rel="stylesheet" type="text/css" href="css/positions.css" />
-        <link rel="stylesheet" type="text/css" href="css/fact_creation.css" />
-        <link rel="stylesheet" type="text/css" href="css/level_selection.css" />
-        <link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
+        <link rel="stylesheet" type="text/css" href="build/proofer.css" />
         <script src="js/libs/require.js/require.js"></script>
         <script src="build/proofer.js"></script>
     </head>
