Added event binding, need to make some decisions on the menu and create new scenes

--- a/html/mainMenu.html
+++ b/html/mainMenu.html
@@ -1,10 +1,10 @@
-<div id="OpeningGraphic">
+<div id='OpeningGraphic'>
     <p>Proofer - Logic Engine</p>
 </div>
-<ul id="MainMenuOptions" class="center">
-    <li><input type="button" value="Play Game" id="MenuPlayGame" class="jui-button" /></li>
-    <li><input type="button" value="Pick Level" id="MenuPickLevel" class="jui-button" /></li>
-    <li><input type="button" value="Options" id="MenuOptions" class="jui-button" /></li>
-    <li><input type="button" value="Reset Progress" id="MenuReset" class="jui-button" /></li>
-    <li><input type="button" value="Exit" id="MenuExitGame" class="jui-button" /></li>
+<ul id='MainMenuOptions' class='center'>
+    <li><input type='button' value='Play Game' id='PlayGame' /></li>
+    <li><input type='button' value='Pick Level' id='PickLevel' /></li>
+    <li><input type='button' value='Options' id='Options' /></li>
+    <li><input type='button' value='Reset Progress' id='Reset' /></li>
+    <li><input type='button' value='Exit' id='ExitGame' /></li>
 </ul>
