Add stub for pick level

--- a/html/aggregate.html
+++ b/html/aggregate.html
@@ -1,3 +1,6 @@
 <script type="text/template" id="mainMenuTemplate">
     <!-- @include mainMenu.html -->
 </script>
+<script type="text/template" id="pickLevelTemplate">
+    <!-- @include pickLevel.html -->
+</script>
