Adding new css files and updating html for menu

--- a/proofer.html
+++ b/proofer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="fill">
+<html>
     <head>
         <title>Proofer - The Logic Engine</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,8 +7,8 @@
         <script src="./require.js"></script>
         <script src="./proofer.js"></script>
     </head>
-    <body class="menu-focused fill">
-        <div id="stage" class="fill">
+    <body>
+        <div id="stage">
         </div>
         <div class="hidden">
             <!-- @include html/aggregate.html -->
