--- a/html/mainMenu.html
+++ b/html/mainMenu.html
@@ -1,9 +1,11 @@
-<div id='OpeningGraphic'>
-    <p>Proofer - Logic Engine</p>
+<div class='container-large'>
+    <div id='OpeningGraphic'>
+        <p>Proofer - Logic Engine</p>
+    </div>
+    <ul id='MainMenuOptions' class='menu-list'>
+        <li><input type='button' value='Play Game' id='PlayGame' /></li>
+        <li><input type='button' value='Pick Level' id='PickLevel' /></li>
+        <li><input type='button' value='Options' id='Options' /></li>
+        <li><input type='button' value='Exit' id='ExitGame' /></li>
+    </ul>
 </div>
-<ul id='MainMenuOptions' class='center'>
-    <li><input type='button' value='Play Game' id='PlayGame' /></li>
-    <li><input type='button' value='Pick Level' id='PickLevel' /></li>
-    <li><input type='button' value='Options' id='Options' /></li>
-    <li><input type='button' value='Exit' id='ExitGame' /></li>
-</ul>
